welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: ';' expected but '{' found.
  } while (!crossing()) {
                        ^